------------------------------------------------------------------------
r2489 | gaser | 2023-12-05 09:13:23

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_vol_defs.m
 M doc/cat.html
 M doc/index.html

(1) Changed: Increased limit for maximum number of labels for categorical
             interpolation in cat_vol_def.m.
(2) Changed: Some corrections for authorships in references.
------------------------------------------------------------------------
r2485 | rdahnke | 2023-11-23 19:50:51

Changed paths:
 M CHANGES.txt
 M cat_main.m
 M cat_main1639.m
 M cat_main_cleanup.m
 M cat_run_job1639.m

Fixed:   Reset skull-stripping update in cat_main_cleanup (called from 
         cat_main[1639] to setting from r1981 and r2183 that includes update 
         of the brain mask but only in cases without skull-stripping. 
Fixed:   Tiny changes in cat_run_job1939.
------------------------------------------------------------------------
r2480 | dahnke | 2023-11-20 16:52:28

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_run_job1639.m
 M cat_stat_marks.m
 D cat_tst_qa201602.m
M  cat_vol_mimcalc.m
 M cat_vol_qa.m
 D cat_vol_qa2.m
 M cat_vol_qa201901.m

Large update of the quality control tools:  
Added new Version of image quality estimation cat_vol_qa that works now as hub 
to call different versions of the QC cat_vol_qa#(x) added here, with # as the 
year and month and an additional x that reference the updated versions corrected
for general problems observed in the new test framework. The test framework 
includes the (i) standard BWP, (ii) the BWP with simulated preprocessing error, 
(iii) IXI (aging), (iv) atlas (lesions), (iv) MR-ART (motion artifacts), and 
(v) a private library of real datasets of public/private projects/studies.  
Function was tested in cross-section, longitudinal, and batch.
            
1) Renamed:  Renamed cat_vol_qa to cat_vol_qa202205 (=deleted). 
             Renamed cat_vol_qa2 to cat_vol_qa (=replaced). 